[package]
name = "cert-manager"
version = "0.0.7" # https://crates.io/crates/cert-manager

edition = "2021"
rust-version = "1.69"
publish = true
description = "Cert manager in Rust"
repository = "https://github.com/gyuho/cert-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
log = "0.4.17"
rand = "0.8.5"
random-manager = "0.0.5" # https://crates.io/crates/random-manager/versions
rcgen = { version = "0.10.0", features = ["pem", "x509-parser"] } # https://github.com/est31/rcgen
rsa = { version = "0.9.0", features = ["pem"] } # https://crates.io/crates/rsa
rustls = "0.21.1" # https://github.com/rustls/rustls/tags
rustls-pemfile = "1.0.2" # https://github.com/rustls/pemfile
x509-parser = "0.15.0"

[dev-dependencies]
env_logger = "0.10.0"
tempfile = "3.5.0"

[package.metadata.cargo-udeps.ignore]
normal = ["rsa"]
